k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-php-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f1-php-backend
  template:
    metadata:
      labels:
        app: f1-php-backend
    spec:
      containers:
        - name: f1-php-backend
          image: f1-php-backend
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
