k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-php-backend
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: f1-php-backend
