k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-vue-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: f1-vue-frontend
